--- a/softvence/package.json
+++ b/softvence/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "daisyui": "5.1.23",
     "framer-motion": "12.23.22",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
